--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@
 cmake_minimum_required(VERSION 3.16)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-project(vulkanunderqml LANGUAGES CXX)
+project(TryAlgebraProj LANGUAGES CXX)
 
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Qml Quick)
 find_package(glm REQUIRED)
@@ -16,29 +16,30 @@ add_subdirectory(ThirdParty/MathLibrary)
 
 qt_standard_project_setup(REQUIRES 6.5)
 
-qt_add_executable(vulkanunderqml
+qt_add_executable(TryAlgebra
     main.cpp
-    vulkansquircle.cpp vulkansquircle.h
+    PixelDataRenderer.cpp
+    PixelDataRenderer.h
 )
 
-qt_add_qml_module(vulkanunderqml
-    URI VulkanUnderQML
+qt_add_qml_module(TryAlgebra
+    URI TryAlgebra
     QML_FILES
-        main.qml
+        Main.qml
     RESOURCES
-        squircle.frag.spv
-        squircle.vert.spv
-    RESOURCE_PREFIX /scenegraph/vulkanunderqml
+        ThirdParty/Shader/DrawEditorLayout.spv
+    RESOURCE_PREFIX /tryAlgebra
     NO_RESOURCE_TARGET_PATH
 )
 
-target_link_libraries(vulkanunderqml PRIVATE
+target_link_libraries(TryAlgebra PRIVATE
     Qt6::Core
     Qt6::Gui
     Qt6::Qml
     Qt6::Quick
     glm::glm
     VulkanFramework
+    MathDocumentRendering
 )
 
 
