--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,3 +49,9 @@ install(TARGETS TryAlgebra
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
+
+qt_generate_deploy_qml_app_script(
+    TARGET TryAlgebra
+    OUTPUT_SCRIPT deploy_script
+)
+install(SCRIPT ${deploy_script})
